
$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.11.2
--------------
* Add missing CPU info attrs on aarch64 on Linux.
* Fix crash when manipulating cpukinds after topology
  duplication, thanks to Hadrien Grasland for the report.
* Fix missing input target checks in memattr functions,
  thanks to Hadrien Grasland for the report.
* Fix a memory leak when ignoring NUMA distances on FreeBSD.
* Fix build failure on old Linux distributions without accessat().
* Fix non-Windows importing of XML topologies and CPUID dumps exported
  on Windows.
* hwloc-calc --cpuset-output-format systemd-dbus-api now allows
  to generate AllowedCPUs information for systemd slices.
  See the hwloc-calc manpage for examples. Thanks to Pierre Neyron.
* Some fixes in manpage EXAMPLES and split them into subsections.


Version 2.11.1
--------------
* Fix bash completions, thanks Tavis Rudd.


Version 2.11.0
--------------
* API
  + Add HWLOC_MEMBIND_WEIGHTED_INTERLEAVE memory binding policy on
    Linux 6.9+. Thanks to Honggyu Kim for the patch.
    - weighted_interleave_membind is added to membind support bits.
    - The "weighted" policy is added to the hwloc-bind tool.
  + Add hwloc_obj_set_subtype(). Thanks to Hadrien Grasland for the report.
* GPU support
  + Don't hide the GPU NUMA node on NVIDIA Grace Hopper.
  + Get Intel GPU OpenCL device locality.
  + Add bandwidths between subdevices in the LevelZero XeLinkBandwidth
    matrix.
  + Fix PCI Gen4+ link speed of NVIDIA GPU obtained from NVML,
    thanks to Akram Sbaih for the report.
* Windows support
  + Fix Windows support when UNICODE is enabled, several hwloc features
    were missing, thanks to Martin for the report.
  + Fix the enabling of CUDA in Windows CMake build,