@@ -20,6 +20,8 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.11.2
 --------------
 * Add missing CPU info attrs on aarch64 on Linux.
+* Use ACPI CPPC on Linux to get better information about cpukinds,
+  at least on AMD CPUs.
 * Fix crash when manipulating cpukinds after topology
   duplication, thanks to Hadrien Grasland for the report.
 * Fix missing input target checks in memattr functions,
